# TicketingApp

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt  update_groups_types_statuses.py
myapp/: db.sqlite3  requirements.txt  setup.py
myapp/config/: settings.py  urls.py
myapp/myapp/: asgi.py  settings.py  urls.py
myapp/templates/: base.html
myapp/templates/tickets/: dashboard.html  group_management.html  kanban_board.html  ticket_detail.html  ticket_form.html  ticket_list.html
myapp/templates/users/: login.html  logout.html  password_change.html  password_change_done.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  profile.html  profile_update.html  register.html
myapp/tickets/: __init__.py  admin.py  api.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
myapp/tickets/management/: __init__.py
myapp/tickets/management/commands/: __init__.py  create_initial_categories_requestors.py  reset_data.py  update_statuses.py
myapp/tickets/migrations/: 0001_alter_ticketcomment_author.py  0001_initial.py  0002_ticketcategory_ticketrequestor_and_more.py  update_ticket_data.py
myapp/users/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
myapp/users/migrations/: 0001_initial.py
